# BackendTask

./: .env.example  .gitignore  BackTask2.db  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  test_integration.db
database/: db.py  models.py
repositories/: comment_repository.py  user_repository.py
routes/: auth.py  comments.py  tasks.py
schemas/: comment.py  task.py  user.py
services/: task_service.py
tests/: test_task_integration.py  test_task_service.py
utils/: health.py  minio_client.py  security.py
